# mobile-strings-converter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report_template.md  issue_template.md
.github/workflows/: build-and-publish.yaml  build.yaml  main-branch-build.yaml  publish.yaml  push.yaml
examples/: strings-en.xml
src/: main.py  style.py
src/android_strings_converter/: __init__.py  __main__.py  converter.py
src/android_strings_converter/assets/fonts/Anek_Telugu/: README.txt
src/mobile_strings_converter/: __init__.py  __main__.py  console_style.py  converter.py
tests/: base_converter_test.py  base_tests.py  strings-errors.txt  strings.csv  strings.json  tes_to_google_sheets.py  tes_to_xml.py  test_android.py  test_csv.py  test_get_strings.py  test_get_strings_android.py  test_get_strings_ios.py  test_get_xml_data.py  test_html.py  test_ios.py  test_json.py  test_md.py  test_ods.py  test_pdf.py  test_to_android.py  test_to_csv.py  test_to_html.py  test_to_ios.py  test_to_json.py  test_to_md.py  test_to_ods.py  test_to_pdf.py  test_to_xlsx.py  test_to_yaml.py  test_xlsx.py  test_yaml.py
tests/files/: strings.rst  strings.xlsx
tests/files/csv/: strings-en.csv  strings-es.csv
tests/files/html/: strings-en.html  strings-es.html  strings-zh.html
tests/files/input/: Localizable.strings  strings.xml
tests/files/ios/: Localizable.strings
tests/files/json/: strings-en.json  strings-es.json  strings.json
tests/files/md/: strings.md
tests/files/ods/: strings-en.ods  strings-es.ods  strings-zh.ods
tests/files/template-with-comments/: Localizable.strings  strings.csv  strings.html  strings.json  strings.md  strings.ods  strings.xlsx  strings.xml  strings.yaml
tests/files/template-without-comments/: Localizable.strings  strings.csv  strings.html  strings.ods  strings.xlsx  strings.xml  strings.yaml
tests/files/without-comments/: Localizable.strings  strings.json  strings.ods  strings.xml
tests/files/xlsx/: strings-en.xlsx  strings-es.xlsx  strings-zh.xlsx
tests/files/xml/: strings-es.xml  strings-zh.xml
tests/files/yaml/: strings-en.yaml  strings-es.yaml  strings-zh.yaml
