[tool.poetry]
name = "mobile-strings-converter"
version = "0.1.1"
description = "A Python package that converts Android & iOS strings files to any supported file type."
authors = ["José Carlos López <henestrosaconh@gmail.com>"]
license = "MIT"
classifiers=[
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Other OS",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords=[
    "android",
    "strings.xml",
    "strings",
    "converter",
    "csv",
    "xlsx",
    "yaml",
    "html",
    "json",
    "ods",
    "pdf",
    "md",
    "ios",
    "Localizable.strings"
]
repository="https://github.com/HenestrosaConH/mobile-strings-converter"
readme = "README.md"
packages = [{include = "mobile_strings_converter", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"
pyyaml = "^6.0"
protobuf = "^4.21.12"
gspread = "^5.7.2"
openpyxl = "^3.1.0"
fpdf2 = "^2.6.1"
lingua-language-detector = "^1.3.2"
python-bidi = "^0.4.2"
arabic-reshaper = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
codecov = "^2.1.12"

[tool.poetry.group.test.dependencies]
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
