[tool.poetry]
name = "mobile-strings-converter"
version = "0.1.4"
description = "Convert Android & iOS strings files to any supported file type and vice versa."
authors = ["José Carlos López <henestrosadev@gmail.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Other OS",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "android",
    "strings.xml",
    "strings",
    "converter",
    "csv",
    "xlsx",
    "yaml",
    "html",
    "json",
    "ods",
    "pdf",
    "md",
    "ios",
    "Localizable.strings"
]
repository = "https://github.com/HenestrosaDev/mobile-strings-converter"
readme = "README.md"
packages = [{ include = "mobile_strings_converter", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8"
pyyaml = "^6.0.1"
protobuf = "^5.26.1"
gspread = "^6.1.0"
openpyxl = "^3.1.2"
fpdf2 = "^2.7.8"
lingua-language-detector = "^2.0.2"
python-bidi = "^0.4.2"
arabic-reshaper = "^3.0.0"
ezodf = "^0.3.2"
pypdf2 = "^3.0.1"
lxml = "^5.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
codecov = "^2.1.12"

[tool.poetry.group.test.dependencies]
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
